[gd_scene load_steps=4 format=3 uid="uid://chabragb6rc5h"]

[ext_resource type="Script" path="res://Scripts/Environmental/Turret/turret.gd" id="1_soy81"]
[ext_resource type="Texture2D" uid="uid://bc1jgbsbfsgcs" path="res://Assets/images/turret_bottom.png" id="2_gxt2c"]
[ext_resource type="Texture2D" uid="uid://bv7hapukl10hg" path="res://Assets/images/turret_top.png" id="3_ewqqd"]

[node name="Turret" type="Area2D"]
script = ExtResource("1_soy81")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_gxt2c")

[node name="Barrel" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Barrel"]
position = Vector2(-16, 8)
scale = Vector2(2, 2)
texture = ExtResource("3_ewqqd")
offset = Vector2(12.5, 14)

[node name="BarrelTip" type="Node2D" parent="Barrel"]
position = Vector2(21, -27)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Barrel"]
polygon = PackedVector2Array(20, 19, 923, 273, 913, -264, 22, -27)

[node name="RayCast2D" type="RayCast2D" parent="Barrel"]
target_position = Vector2(600, 0)
collision_mask = 15

[node name="Line2D" type="Line2D" parent="Barrel"]
position = Vector2(19, -24)
points = PackedVector2Array(0, 0, 500, 0)
width = 1.0
default_color = Color(1, 0, 0, 1)
antialiased = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Barrel" to="." method="_on_barrel_body_entered"]
[connection signal="body_exited" from="Barrel" to="." method="_on_barrel_body_exited"]
